[gd_scene load_steps=7 format=3 uid="uid://dh7r67xccniya"]

[ext_resource type="Script" path="res://scripts/enemy_jellyfish.gd" id="1_ibfrt"]
[ext_resource type="Texture2D" uid="uid://2565e2g03rq8" path="res://assets/jellyfish.png" id="2_lq4te"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2o3uf"]
radius = 20.0
height = 72.0

[sub_resource type="Animation" id="Animation_srcpq"]
resource_name = "boiling"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25209),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_l10vw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbnhb"]
_data = {
"RESET": SubResource("Animation_l10vw"),
"boiling": SubResource("Animation_srcpq")
}

[node name="EnemyJellyfish" type="Area2D" groups=["enemy"]]
script = ExtResource("1_ibfrt")
health = 9
speed = 50.0

[node name="EnemySprite" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_lq4te")
hframes = 2

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2o3uf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gbnhb")
}

[node name="FireRate" type="Timer" parent="."]
wait_time = 3.0

[node name="StartDelay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
[connection signal="timeout" from="StartDelay" to="." method="_on_start_delay_timeout"]
